--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,29 +1,51 @@
 <h1>Burger Nom</h1>
 
-<ul>
+<div>
   {{#each burgers}}
-  <li>
     <p>
-      {{this.id}}, {{this.burger_name}}
+      {{id}}. {{burger_name}}
       <button data-burgerid="{{this.id}}" class="devburg">Devour Burger!</button>
     </p>
-  </li>
   {{/each}}
-</ul>
+</div>
 
 <h2>Create a Burger</h2>
-<form id="createburger" class="button-size">
-  <textarea type="text" name="burger"></textarea>
+<form id="createburger">
+  <input type="text" name="burger" />
   <button type="submit">Add Burger!</button>
 </form>
 
-<h2>Update a Burger</h2>
-<form id="updateburger" class="button-size">
-  <select name="id">
-		{{#each burgers}}
-			<option value="{{this.id}}">{{this.burger_name}}</option>
-		{{/each}}
-	</select>
-  <textarea type="text" name="burger" placeholder="burger"></textarea>
-  <button type="submit">Update Burger!</button>
-</form>
+<script type="text/javascript">
+
+  $(".devburg").on("click", function(e) {
+    var id = $(this).data("burgerid");
+    console.log(id);
+
+    $.ajax("/burgers/" + id, {
+      type: "PUT",
+      data: {
+        id: id
+      }
+    }).then(function() {
+      console.log("updated id ", id);
+      location.reload();
+    })
+  });
+
+  $("#createburger").on("submit", function(e) {
+    e.preventDefault();
+
+    var newBurger = {
+      burger: $("#createburger [name=burger]").val().trim()
+    };
+
+    $.ajax("/burgers", {
+      type: "POST",
+      data: newBurger
+    }).then(function() {
+      console.log("created new burger");
+      location.reload();
+    })
+  });
+
+</script>
