--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Burger Noms</title>
+    <link rel="stylesheet" href="/public/assets/css/burger_style.css">
     <script src="https://code.jquery.com/jquery.js"></script>
 </head>
 
 <body>
+
     {{{ body }}}
+    
 </body>
 
 </html>
