update, app functionality mostly complete

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,5 +27,5 @@
 <h2>Create a Burger</h2>
 <form id="createburger">
   <input id="burg" type="text" name="burger"/>
-  <button type="submit">Add Burger!</button>
+  <button id="addburgbtn" type="submit">Add Burger!</button>
 </form>
