--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
-    {{name}}
+    {{burger_name}}
 
     <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
-        DEVOUR ME
+        {{#if devoured}}DEVOUR ME{{else}}Bring Me Back{{/if}}
     </button>
 </li>
