--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <title>Burger Noms</title>
-    <link rel="stylesheet" href="/assets/css/burger_style.css">
+    <link rel="stylesheet" href="/assets/css/reset.css" />
+    <link rel="stylesheet" href="/assets/materialize/css/materialize.css">
+    <link rel="stylesheet" href="/assets/css/burger_style.css" />
+    <script src="/assets/materialize/js/materialize.js"></script>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/assets/js/burgerJS.js"></script>
 </head>
@@ -14,6 +16,10 @@
 <body>
 
     {{{ body }}}
+
+    <script type="text/javascript">
+
+    </script>
 
 </body>
 
