--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -3,7 +3,7 @@
 
     {{#if devoured}}
 
-        <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
+        <button class="change-devoured waves-effect waves-light btn" data-id="{{id}}" data-newdevoured="{{devoured}}">
             DEVOUR ME
         </button>
 
