--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,31 +1,70 @@
-<h1>Burger Nom</h1>
+<div class="container center-align">
 
-<h1>Burgers to Nom</h1>
+  <div class="row title-row">
+    <section class="col s12">
+      <h3>Burger Nom</h3>
+    </section>
+  </div>
 
-<div>
-  {{#each burgers}}
-    {{#unless devoured}}
-      
+
+  <div class="row burger-row">
+    <section class="col s12 m6">
+
+      <h3>Burgers to Nom</h3>
+
+      {{#each burgers}}
+      {{#unless devoured}}
+
       {{> burgers/burger-block devoured=true}}
 
-    {{/unless}}
-  {{/each}}
-</div>
+      {{/unless}}
+      {{/each}}
 
-<h1>Burgers no More</h1>
+    </section>
 
-<div>
-  {{#each burgers}}
-    {{#if devoured}}
+    <section class="col s12 m6">
+      
+      <h3>Burgers no More</h3>
+
+      {{#each burgers}}
+      {{#if devoured}}
 
       {{> burgers/burger-block devoured=false}}
 
-    {{/if}}
-  {{/each}}
+      {{/if}}
+      {{/each}}
+  
+    </section>
+  </div>
+
+  <div class="row form-row">
+
+    <section class="col s12">
+
+      <h4>Create a Burger</h4>
+
+      <form id="createburger">
+        
+        <div class="row">
+          <div class="input-field col s6 offset-s3">
+          <input id="burg" type="text" name="burger" />
+          </div>
+        </div>
+
+        <div class="row">
+          <button class="btn waves-effect waves-light" id="addburgbtn" type="submit">Add Burger!</button>
+        </div>
+
+      </form>
+
+    </section>
+
 </div>
 
-<h2>Create a Burger</h2>
-<form id="createburger">
-  <input id="burg" type="text" name="burger"/>
-  <button id="addburgbtn" type="submit">Add Burger!</button>
-</form>
+
+
+
+
+
+
+</div>
