--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,14 +1,14 @@
 <div class="container center-align">
 
   <div class="row title-row">
-    <section class="col s12">
+    <section class="title-text center-align">
       <h3>Burger Nom</h3>
     </section>
   </div>
 
 
   <div class="row burger-row">
-    <section class="col s12 m6">
+    <section class="col s12 m6" id="burgers-to-nom">
 
       <h3>Burgers to Nom</h3>
 
@@ -22,7 +22,7 @@
 
     </section>
 
-    <section class="col s12 m6">
+    <section class="col s12 m6" id="burgers-no-more">
       
       <h3>Burgers no More</h3>
 
@@ -37,11 +37,13 @@
     </section>
   </div>
 
+  <div class="divider"></div>
+
   <div class="row form-row">
 
     <section class="col s12">
 
-      <h4>Create a Burger</h4>
+      <h4>Add a Burger</h4>
 
       <form id="createburger">
         
