--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <title>Burger Noms</title>
     <link rel="stylesheet" href="/assets/css/reset.css" />
     <link rel="stylesheet" href="/assets/materialize/css/materialize.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/burger_style.css" />
     <script src="/assets/materialize/js/materialize.js"></script>
     <script src="https://code.jquery.com/jquery.js"></script>
