Application complete. Disabled enter-page functionality due to page-reload problem

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,72 +1,78 @@
-<div class="container center-align">
+{{!-- <div class="everything-container"> --}}
 
-  <div class="row title-row">
-    <section class="title-text center-align">
-      <h3>Burger Nom</h3>
-    </section>
-  </div>
+  {{!-- <div id="enter-container">
+    <div class="enter-text">
+      <button class="waves-effect waves-light btn" id="clickMe">Welcome to Burger Nom</button>
+    </div>
+    <div class="enter-img">
+    </div>
+  </div> --}}
+
+  <div id="index-container" class="container center-align">
+
+    <div class="row title-row">
+      <section class="title-text center-align">
+        <h3>Burger Nom</h3>
+      </section>
+    </div>
 
 
-  <div class="row burger-row">
-    <section class="col s12 m6" id="burgers-to-nom">
+    <div class="row burger-row">
+      <section class="col s12 m6" id="burgers-to-nom">
 
-      <h3>Burgers to Nom</h3>
+        <h3>Burgers to Nom</h3>
 
-      {{#each burgers}}
-      {{#unless devoured}}
+        {{#each burgers}}
+        {{#unless devoured}}
 
-      {{> burgers/burger-block devoured=true}}
+        {{> burgers/burger-block devoured=true}}
 
-      {{/unless}}
-      {{/each}}
+        {{/unless}}
+        {{/each}}
 
-    </section>
+      </section>
 
-    <section class="col s12 m6" id="burgers-no-more">
-      
-      <h3>Burgers no More</h3>
-
-      {{#each burgers}}
-      {{#if devoured}}
-
-      {{> burgers/burger-block devoured=false}}
-
-      {{/if}}
-      {{/each}}
-  
-    </section>
-  </div>
-
-  <div class="divider"></div>
-
-  <div class="row form-row">
-
-    <section class="col s12">
-
-      <h4>Add a Burger</h4>
-
-      <form id="createburger">
+      <section class="col s12 m6" id="burgers-no-more">
         
-        <div class="row">
-          <div class="input-field col s6 offset-s3">
-          <input id="burg" type="text" name="burger" />
+        <h3>Burgers no More</h3>
+
+        {{#each burgers}}
+        {{#if devoured}}
+
+        {{> burgers/burger-block devoured=false}}
+
+        {{/if}}
+        {{/each}}
+    
+      </section>
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="row form-row">
+
+      <section class="col s12">
+
+        <h4>Add a Burger</h4>
+
+        <form id="createburger">
+          
+          <div class="row">
+            <div class="input-field col s6 offset-s3">
+            <input id="burg" type="text" name="burger" />
+            </div>
           </div>
-        </div>
 
-        <div class="row">
-          <button class="btn waves-effect waves-light" id="addburgbtn" type="submit">Add Burger!</button>
-        </div>
+          <div class="row">
+            <button class="btn waves-effect waves-light" id="addburgbtn" type="submit">Add Burger!</button>
+          </div>
 
-      </form>
+        </form>
 
-    </section>
+      </section>
 
-</div>
+  </div>
 
+  </div>
 
-
-
-
-
-
-</div>
+{{!-- </div> --}}
